syntax = "proto3";

package materialize;
option go_package = "github.com/estuary/protocols/materialize";

import "flow/flow.proto";
import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.protosizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// Constraint constrains the use of a flow.Projection within a materialization.
message Constraint {
  // Type encodes a constraint type for this flow.Projection.
  enum Type {
    // This specific projection must be present.
    FIELD_REQUIRED = 0;
    // At least one projection with this location pointer must be present.
    LOCATION_REQUIRED = 1;
    // A projection with this location is recommended, and should be included by
    // default.
    LOCATION_RECOMMENDED = 2;
    // This projection may be included, but should be omitted by default.
    FIELD_OPTIONAL = 3;
    // This projection must not be present in the materialization.
    FIELD_FORBIDDEN = 4;
    // This specific projection is required but is also unacceptable (e.x.,
    // because it uses an incompatible type with a previous applied version).
    UNSATISFIABLE = 5;
  }
  Type type = 2;
  // Optional human readable reason for the given constraint.
  // Implementations are strongly encouraged to supply a descriptive message.
  string reason = 3;
}

// Driver is the service implemented by a materialization target system.
service Driver {
  // Spec returns the specification definition of this driver.
  // Notably this includes its endpoint and resource configuration JSON schema.
  rpc Spec(SpecRequest) returns (SpecResponse);
  // Validate that a CollectionSpec is compatible with a materialization target,
  // and return constraints over the projections of the collection.
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  // Apply a CollectionSpec and FieldSelections to a materialization target.
  rpc Apply(ApplyRequest) returns (ApplyResponse);
  // Transactions is a very long lived RPC through which the Flow runtime and a
  // materialization endpoint cooperatively execute an unbounded number of
  // transactions. The RPC follows the following lifecycle:
  //
  // :Open:
  //    - The Flow runtime client sends TransactionRequest.Open,
  //      opening the stream and requesting it be fenced from other streams.
  // :Opened:
  //    - The driver server sends TransactionResponse.Opened after,
  //      where supported, ensuring other stream clients are fenced.
  //
  // TransactionRequest.Open and TransactionResponse.Opened are sent only
  // once, at the commencement of the stream. Thereafter the protocol loops:
  //
  // :Load:
  //    - The client sends zero or more TransactionRequest.Load.
  //    - The driver server may immediately send any number of
  //      TransactionResponse.Loaded in response.
  //    - Or, it may defer responding with some or all loads until later.
  // :Prepare:
  //    - The client sends TransactionRequest.Prepare.
  //    - At this time, the server must flush remaining
  //      TransactionResponse.Loaded.
  // :Prepared:
  //    - The server sends TransactionResponse.Prepared.
  // :Store:
  //    - The client sends zero or more TransactionRequest.Store.
  // :Commit:
  //    - The client sends TransactionRequest.Commit.
  //    - The server commits the prepared Flow checkpoint and all stores.
  // :Committed:
  //    - The server sends TransactionResponse.Committed.
  //    - The Flow runtime persists the prepared driver checkpoint.
  //    - Client and server begin a new transaction and loop to "Load".
  //
  // An error of any kind rolls back the transaction in progress and terminates
  // the stream.
  rpc Transactions(stream TransactionRequest)
      returns (stream TransactionResponse);
}

// SpecRequest is the request type of the Spec RPC.
message SpecRequest {
  // Endpoint type addressed by this request.
  flow.EndpointType endpoint_type = 1;
  // Driver specification, as an encoded JSON object.
  // This may be a partial specification (for example, a Docker image),
  // providing only enough information to fetch the remainder of the
  // specification schema.
  string endpoint_spec_json = 2 [
    (gogoproto.casttype) = "encoding/json.RawMessage",
    json_name = "endpointSpec"
  ];
}

// SpecResponse is the response type of the Spec RPC.
message SpecResponse {
  // JSON schema of an endpoint specification.
  string endpoint_spec_schema_json = 1 [
    (gogoproto.casttype) = "encoding/json.RawMessage",
    json_name = "endpointSpecSchema"
  ];
  // JSON schema of a resource specification.
  string resource_spec_schema_json = 2 [
    (gogoproto.casttype) = "encoding/json.RawMessage",
    json_name = "resourceSpecSchema"
  ];
  // URL for connector's documention.
  string documentation_url = 3;
}

// ValidateRequest is the request type of the Validate RPC.
message ValidateRequest {
  // Name of the materialization being validated.
  string materialization = 1 [ (gogoproto.casttype) =
    "github.com/estuary/protocols/flow.Materialization" ];
  // Endpoint type addressed by this request.
  flow.EndpointType endpoint_type = 2;
  // Driver specification, as an encoded JSON object.
  string endpoint_spec_json = 3 [
    (gogoproto.casttype) = "encoding/json.RawMessage",
    json_name = "endpointSpec"
  ];
  // Bindings of endpoint resources and collections from which they would be materialized.
  // Bindings are ordered and unique on the bound collection name.
  message Binding {
    // JSON-encoded object which specifies the endpoint resource to be materialized.
    string resource_spec_json = 1 [
      (gogoproto.casttype) = "encoding/json.RawMessage",
      json_name = "resourceSpec"
    ];
    // Collection to be materialized.
    flow.CollectionSpec collection = 2 [ (gogoproto.nullable) = false ];
    // Projection configuration, keyed by the projection field name,
    // with JSON-encoded and driver-defined configuration objects.
    map<string, string> field_config_json = 3 [
      (gogoproto.castvalue) = "encoding/json.RawMessage",
      json_name = "fieldConfig"
    ];
  }
  repeated Binding bindings = 4;
}

// ValidateResponse is the response type of the Validate RPC.
message ValidateResponse {
  // Validation responses for each binding of the request,
  // and matching the request ordering.
  message Binding {
    // Constraints over collection projections imposed by the Driver,
    // keyed by the projection field name. Projections of the CollectionSpec
    // which are missing from constraints are implicitly forbidden.
    map<string, Constraint> constraints = 1;
    // Components of the resource path which fully qualify the resource
    // identified by this binding.
    // - For an RDBMS, this might be []{dbname, schema, table}.
    // - For Kafka, this might be []{topic}.
    // - For Redis, this might be []{key_prefix}.
    repeated string resource_path = 2;
    // Materialize combined delta updates of documents rather than full
    // reductions.
    //
    // When set, the Flow runtime will not attempt to load documents via
    // TransactionRequest.Load, and also disables re-use of cached documents
    // stored in prior transactions. Each stored document is exclusively
    // combined from updates processed by the runtime within the current
    // transaction only.
    //
    // This is appropriate for drivers over streams, WebHooks, and append-only
    // files.
    //
    // For example, given a collection which reduces a sum count for each key,
    // its materialization will produce a stream of delta updates to the count,
    // such that a reader of the stream will arrive at the correct total count.
    bool delta_updates = 3;
  }
  repeated Binding bindings = 1;
}

// ApplyRequest is the request type of the Apply RPC.
message ApplyRequest {
  // Materialization to be applied.
  flow.MaterializationSpec materialization = 1;
  // Version of the MaterializationSpec being applied.
  string version = 2;
  // Is this Apply a dry-run? If so, no action is undertaken and Apply will
  // report only what would have happened.
  bool dry_run = 3;
}

// ApplyResponse is the response type of the Apply RPC.
message ApplyResponse {
  // Human-readable description of the action that the Driver took (or, if
  // dry_run, would have taken). If empty, this Apply is to be considered a
  // "no-op".
  string action_description = 1;
}

// TransactionRequest is the request type of a Transaction RPC.
// It will have exactly one top-level field set, which represents its message
// type.
message TransactionRequest {
  // Open a transaction stream and, where supported, fence off other
  // streams of this materialization that overlap the provide
  // [key_begin, key_end) range, such that those streams cannot
  // issue further commits.
  //
  // Fencing semantics are optional, but required for exactly-once semantics.
  // Non-transactional stores can ignore this aspect and achieve at-least-once.
  //
  // Where implemented, servers must guarantee that no other streams of this
  // materialization which overlap the provided [key_begin, key_end)
  // (now "zombie" streams) can commit transactions, and must then
  // return the final checkpoint committed by this stream in its response.
  message Open {
    // Materialization to be transacted, which is the MaterializationSpec
    // last provided to a successful Apply RPC.
    flow.MaterializationSpec materialization = 1;
    // Version of the opened MaterializationSpec, which matches the version
    // last provided to a successful Apply RPC.
    string version = 2;
    // [begin, end] inclusive range of keys processed by this transaction stream.
    // Ranges are with respect to a 32-bit hash of a packed document key.
    fixed32 key_begin = 3;
    fixed32 key_end = 4;
    // Last-persisted driver checkpoint from a previous transaction stream.
    // Or empty, if the driver hasn't returned a checkpoint.
    bytes driver_checkpoint_json = 5 [
      (gogoproto.casttype) = "encoding/json.RawMessage",
      json_name = "driverCheckpoint"
    ];
  }
  Open open = 1;

  // Load one or more documents identified by key.
  // Keys may included documents which have never before been stored,
  // but a given key will be sent in a transaction Load just one time.
  message Load {
    // The materialization binding for documents of this Load request.
    uint32 binding = 1;
    // Byte arena of the request.
    bytes arena = 2 [
      (gogoproto.casttype) = "github.com/estuary/protocols/flow.Arena"
    ];
    // Packed tuples of collection keys, enumerating the documents to load.
    repeated flow.Slice packed_keys = 3 [ (gogoproto.nullable) = false ];
  }
  Load load = 2;

  // Prepare to commit. No further Loads will be sent in this transaction.
  message Prepare {
    // Flow checkpoint to commit with this transaction.
    bytes flow_checkpoint = 1;
  }
  Prepare prepare = 3;

  // Store documents of this transaction commit.
  message Store {
    // The materialization binding for documents of this Store request.
    uint32 binding = 1;
    // Byte arena of the request.
    bytes arena = 2 [
      (gogoproto.casttype) = "github.com/estuary/protocols/flow.Arena"
    ];
    // Packed tuples holding keys of each document.
    repeated flow.Slice packed_keys = 3 [ (gogoproto.nullable) = false ];
    // Packed tuples holding values for each document.
    repeated flow.Slice packed_values = 4 [ (gogoproto.nullable) = false ];
    // JSON documents.
    repeated flow.Slice docs_json = 5 [ (gogoproto.nullable) = false ];
    // Exists is true if this document as previously been loaded or stored.
    repeated bool exists = 6;
  }
  Store store = 4;

  // Commit the transaction.
  message Commit {}
  Commit commit = 5;
}

// TransactionResponse is the response type of a Transaction RPC.
// It will have exactly one top-level field set, which represents its message
// type.
message TransactionResponse {
  // Opened responds to TransactionRequest.Open of the client.
  message Opened {
    // Flow checkpoint which was previously committed with this |shard_fqn|.
    // May be nil if the Driver is not stateful, in which case the Flow runtime
    // will use its most-recent internal checkpoint. Note this internal
    // checkpoint is at-least-once (at most one following transaction may have
    // been partially or even fully committed since it was recorded).
    //
    // A driver may also send the value []byte{0xf8, 0xff, 0xff, 0xff, 0xf, 0x1}
    // to instruct the Flow runtime to disregard its internal checkpoint and
    // fully rebuild the materialization from scratch. This sentinel is a
    // trivial encoding of the max-value 2^29-1 protobuf tag with boolean true.
    bytes flow_checkpoint = 1;
  }
  Opened opened = 1;

  // Loaded responds to TransactionRequest.Loads of the client.
  // It returns documents of requested keys which have previously been stored.
  // Keys not found in the store MUST be omitted. Documents may be in any order,
  // both within and across Loaded response messages, but a document of a given
  // key MUST be sent at most one time in a Transaction.
  message Loaded {
    // The materialization binding for documents of this Loaded response.
    uint32 binding = 1;
    // Byte arena of the request.
    bytes arena = 2 [
      (gogoproto.casttype) = "github.com/estuary/protocols/flow.Arena"
    ];
    // Loaded JSON documents.
    repeated flow.Slice docs_json = 3 [ (gogoproto.nullable) = false ];
  }
  Loaded loaded = 2;

  // Prepared responds to a TransactionRequest.Prepare of the client.
  // No further Loaded responses will be sent.
  message Prepared {
    // Optional driver checkpoint of this transaction.
    // If provided, the most recent checkpoint will be persisted by the
    // Flow runtime and returned in a future Fence request.
    bytes driver_checkpoint_json = 1 [
      (gogoproto.casttype) = "encoding/json.RawMessage",
      json_name = "driverCheckpoint"
    ];
  }
  Prepared prepared = 3;

  // Acknowledge the transaction as committed.
  message Committed {}
  Committed committed = 4;
}